fixed all phone htmls except becomecreator and showpartners

--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -52,14 +52,14 @@
     }
 
     html {
-
+        min-height: 100%;
         -webkit-text-size-adjust: 100%;
 
         text-size-adjust: 100%
     }
 </style>
 
-<body style="height: 100%; width: 100%; margin: 0 auto;">
+<body sty style="min-height: 100%; width: 100%; margin: 0 auto;">
 
 
     {% include "menu.html" %}
