--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -88,7 +88,7 @@
                 <label> Описание магазина </label>
                 <br>
                 <br>
-                <textarea name="description" class="uk-textarea uk-width-4-5" style="height: 100%"
+                <textarea name="description" class="uk-textarea uk-width-4-5" maxlength="500" style="height: 100%"
                     placeholder="{{shop.description}}">{{shop.description}}</textarea>
             </div>
             <div class="uk-width-3-5 uk-flex-row">
