--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,4 +1,4 @@
-    <div style="width: 90%; padding: 2% 0; margin: 0 auto" class="uk-navbar-container" uk-navbar>
+    <div style="width: 90%; padding: 2% 0; margin: 0 auto; background-color: white;" class="uk-navbar-container" uk-navbar>
         {% if user.is_authenticated %}
 
 
@@ -93,19 +93,24 @@
                 <li class="uk-parent">
                     <ul class="uk-nav uk-nav-default">
                         <li class="uk-active">
-                            <a href="/goods/category/Clothing" class="uk-button uk-button-text" style="font-size: 2em">Одежда </a>
+                            <a href="/goods/category/Clothing" class="uk-button uk-button-text"
+                                style="font-size: 2em">Одежда </a>
                         </li>
                         <li class="uk-active">
-                            <a href="/goods/category/Shoes" class="uk-button uk-button-text" style="font-size: 2em">Обувь</a>
+                            <a href="/goods/category/Shoes" class="uk-button uk-button-text"
+                                style="font-size: 2em">Обувь</a>
                         </li>
                         <li class="uk-active">
-                            <a href="/goods/category/Bags" class="uk-button uk-button-text" style="font-size: 2em">Сумки</a>
+                            <a href="/goods/category/Bags" class="uk-button uk-button-text"
+                                style="font-size: 2em">Сумки</a>
                         </li>
                         <li class="uk-active">
-                            <a href="/goods/category/Interior" class="uk-button uk-button-text" style="font-size: 2em">Интерьер</a>
+                            <a href="/goods/category/Interior" class="uk-button uk-button-text"
+                                style="font-size: 2em">Интерьер</a>
                         </li>
                         <li class="uk-active">
-                            <a href="/goods/category/Accessories" class="uk-button uk-button-text" style="font-size: 2em">Аксессуары</a>
+                            <a href="/goods/category/Accessories" class="uk-button uk-button-text"
+                                style="font-size: 2em">Аксессуары</a>
                         </li>
                     </ul>
                 </li>
