--- a/bizopt/BO/templates/footer.html
+++ b/bizopt/BO/templates/footer.html
@@ -1,4 +1,4 @@
-<div class=" uk-position-center-bottom uk-width-1">
+<div class="uk-position-bottom-out uk-width-1">
     <div class="uk-container uk-width-1 uk-flex uk-flex-around uk-flex-middle"
         style="color: white; background-color: #0A3644; padding: 5% 0 2% 0">
         <div class="uk-flex-row">
